test/configCases/errors/error-cause-extraction/errors.js
module.exports = [
	{
		message: "Main build error",
		cause: "Underlying cause of the error"
	}
];
